2003-04-15  Dan Winship  <danw@ximian.com>

	* e-folder.c (e_folder_get_has_subfolders,
	e_folder_set_has_subfolders): new boolean flag.

	* e-storage.c (EStoragePrivate, impl_finalize, init): Remove the
	pseudofolders hash
	(e_storage_async_open_folder): Replace the pseudofolders test with
	a test of whether the folder has the "has_subfolders" flag set.
	(e_storage_new_folder): Likewise (for the folder's parent).
	(e_storage_declare_has_subfolders): Set "has_subfolders" on the
	folder.
	(e_storage_get_has_subfolders): Check "has_subfolders" on the
	folder.
	Should fix #33919.

2003-04-14  Not Zed  <NotZed@Ximian.com>

	* glade/e-active-connection-dialog.glade: fix the title of the
	dialogue box.  #41304.

2003-04-09  Dan Winship  <danw@ximian.com>

	* e-folder-list.c: Update for e_option_menu prototype
	constification

2003-04-08  Ettore Perazzoli  <ettore@ximian.com>

	* e-setup.c (setup_bonobo_conf_private_directory): Removed.
	(e_setup): Do not call here.  Also, removed hacks for
	~/evolution/config and ~/evolution/local/Trash.

2003-04-08  Dan Winship  <danw@ximian.com>

	* main.c (main): Add a "--setup-only" flag, to just run e_setup()
	and exit. (For #40889)

	* glade/evolution-startup-wizard.glade: Remove the color specs so
	the druid will use theme colors

	* importer/import.glade: Likewise

2003-04-08  Ettore Perazzoli  <ettore@ximian.com>

	[#40912]

	* e-shell-folder-selection-dialog.c (impl_dispose):
	g_object_weak_unref() the shell here.

2003-04-07  Dan Winship  <danw@ximian.com>

	* evolution-storage.c (evolution_storage_class_init): Fix arg
	types on REMOVED_SHARED_FOLDER signal. #40888

	* evolution-folder-selector-button.c (clicked): Desensitize the
	window's top-level container rather than desensitizing the window
	itself, which causes strange problems [#40854]. Also fix up the
	code that tries to watch for the parent window being destroyed.

	* e-shell.c (impl_Shell_selectUserFolder): Use
	e_dialog_set_transient_for_xid.
